--- a/medial-queries1/main.css
+++ b/medial-queries1/main.css
@@ -1,3 +1,67 @@
 body {
   background: blanchedalmond;
 }
+
+.container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:center;
+  gap: 8px;
+  align-self: center;
+  
+
+}
+
+ .a {
+    width: 177vh;
+    height: 330px;
+    background-color: indigo;
+}
+
+
+
+@media screen and (max-width: 1314px){
+  .a {
+    width: 100%;
+        height: 25vh;
+    background-color: lightgreen;
+  }
+}
+
+.b {
+  width: 793px;
+  height: 330px;
+  background-color: rgb(13, 0, 130);
+}
+
+
+
+@media screen and (max-width: 1314px){
+  .b {
+  width: 100%;
+  height: 50vh;
+  background-color: rgb(179, 213, 27);
+}
+}
+
+
+.c {
+  width: 499px;
+  height: 330px;
+  background-color: rgb(17, 206, 48);
+}
+
+
+
+@media screen and (max-width: 1314px){
+  .c {
+    background-color: rgb(167, 25, 9);
+width: 100%;
+height: 25vh;
+}
+}
+
+    
+
+
+   
